Added Multi language  support and Escalate to agent Features